PROMPT — Append 2014–2022 Experience & Skills (do not remove existing da

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -159,5 +159,47 @@
     "summary":"Automated PoS downloads for analyst teams.",
     "methodology":"Scrum",
     "outcomes":["Transaction throughput ↑ ~60%","Turnaround time ↓"]
+  },
+  {
+    "id":"cabify-agent-onboarding",
+    "title":"Cabify — Driver Authorization & Onboarding",
+    "when":"2020",
+    "client":"Cabify Argentina (Symphony LAM)",
+    "skills":["blueprism","vscode","sqlserver","javascript","powerbi","git","azure","abbyenlp","whatsapp","rpa","python"],
+    "stack":"Blue Prism, ABBYY OCR → web review UI, SQL Server, JS, Power BI, Git, Azure services; WhatsApp status notifications; ERP posting.",
+    "summary":"RPA + full-stack solution to validate documents with ABBYY OCR, present a review UI, and auto-update ERP; drivers are notified via WhatsApp.",
+    "outcomes":["Throughput ↑","Manual review time ↓","Onboarding lead time ↓"]
+  },
+  {
+    "id":"engeform-rpa-coe",
+    "title":"Engeform Brasil — RPA CoE & Delivery",
+    "when":"2018–2019",
+    "client":"Engeform Brasil (Symphony LAM)",
+    "skills":["blueprism","visualstudio","sqlserver","vsts","powerbi","bpm"],
+    "stack":"Blue Prism, VS, SQL Server, VSTS, Power BI; CoE playbooks and training.",
+    "summary":"Solution architect for an enterprise RPA CoE; trained team and delivered scalable robots across HR, Finance & IT.",
+    "outcomes":["Governed delivery model","Faster release cadence","Defects ↓"]
+  },
+  {
+    "id":"kbs-finance-12-automations",
+    "title":"KBS — 12 Finance Automations",
+    "when":"2021–2022",
+    "client":"KBS (Team International)",
+    "skills":["automationanywhere","visualstudio","excel","javascript","powerquery","jira","security"],
+    "stack":"AA360, VS, Excel/Power Query, JavaScript; governance + security baked in.",
+    "summary":"Automated a dozen finance processes and ERP integrations using AA360; set up governance and design reviews.",
+    "outcomes":["Cycle time ↓","SLA attainment ↑","Manual work eliminated"]
+  },
+  {
+    "id":"newell-ptp-integration",
+    "title":"Newell — PTP/AP Integration (SAP + Email)",
+    "when":"2020",
+    "client":"Newell (Team International)",
+    "skills":["blueprism","visualstudio","jira","sap","email","scrum"],
+    "stack":"Blue Prism; SAP web automation + email processing; Scrum delivery.",
+    "summary":"Automated procure-to-pay vendor flows integrating SAP web steps and email handling.",
+    "outcomes":["AHT ↓","Error rate ↓"]
   }
 ]
+
+    
