--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -172,6 +172,26 @@
     "outcomes":["Tiempo de onboarding ↓","Errores de captura ↓","Trazabilidad ↑"]
   },
   {
+    "id":"bancociudad-blueprism",
+    "title":"Banco Ciudad — Automatizaciones Back-Office (Blue Prism)",
+    "when":"2019",
+    "client":"Banco Ciudad (Argentina) — Cognition HQ (antes Symphony LAM)",
+    "skills":["blueprism","sqlserver","javascript","powerbi"],
+    "stack":"Blue Prism para procesos de back-office (validaciones, conciliaciones/altas), integración con apps internas y reporting.",
+    "summary":"Automatizaciones bancarias de soporte operativo y cumplimiento; monitoreo y métricas de ejecución.",
+    "outcomes":["Tiempos de ciclo ↓","Tareas manuales ↓","Calidad de datos ↑"]
+  },
+  {
+    "id":"kbs-netsuite-aa",
+    "title":"KBS — Automatizaciones sobre NetSuite (AA360)",
+    "when":"2021–2022",
+    "client":"KBS (Team International)",
+    "skills":["automationanywhere","netsuite","sqlserver","jira","powerbi"],
+    "stack":"Automation Anywhere 360 con conectores y scripts; orquestación por colas; auditoría y reportes.",
+    "summary":"Automatización de procesos financieros en NetSuite: ingestión de transacciones, conciliaciones y notificaciones.",
+    "outcomes":["AHT ↓","SLA attainment ↑","Errores ↓"]
+  },
+  {
     "id":"newell-ptp-integration",
     "title":"Newell — PTP/AP Integration (SAP + Email)",
     "when":"2020",
@@ -222,24 +242,24 @@
     "outcomes":["Throughput ↑","Re-trabajo ↓","SLA de operación ↑"]
   },
   {
-    "id":"kbs-netsuite-aa",
-    "title":"KBS — Automatizaciones sobre NetSuite (AA360)",
-    "when":"2021–2022",
-    "client":"KBS (Team International)",
-    "skills":["automationanywhere","netsuite","sqlserver","jira","powerbi"],
-    "stack":"Automation Anywhere 360 con conectores y scripts; orquestación por colas; auditoría y reportes.",
-    "summary":"Automatización de procesos financieros en NetSuite: ingestión de transacciones, conciliaciones y notificaciones.",
-    "outcomes":["AHT ↓","SLA attainment ↑","Errores ↓"]
+    "id":"engeform-rpa-coe",
+    "title":"Engeform Brasil — RPA CoE & Delivery",
+    "when":"2018–2019",
+    "client":"Engeform Brasil (Symphony LAM)",
+    "skills":["blueprism","visualstudio","sqlserver","vsts","powerbi","bpm"],
+    "stack":"Blue Prism, VS, SQL Server, VSTS, Power BI; CoE playbooks and training.",
+    "summary":"Solution architect for an enterprise RPA CoE; trained team and delivered scalable robots across HR, Finance & IT.",
+    "outcomes":["Governed delivery model","Faster release cadence","Defects ↓"]
   },
   {
-    "id":"bancociudad-blueprism",
-    "title":"Banco Ciudad — Automatizaciones Back-Office (Blue Prism)",
-    "when":"2019",
-    "client":"Banco Ciudad (Argentina) — Cognition HQ (antes Symphony LAM)",
-    "skills":["blueprism","sqlserver","javascript","powerbi"],
-    "stack":"Blue Prism para procesos de back-office (validaciones, conciliaciones/altas), integración con apps internas y reporting.",
-    "summary":"Automatizaciones bancarias de soporte operativo y cumplimiento; monitoreo y métricas de ejecución.",
-    "outcomes":["Tiempos de ciclo ↓","Tareas manuales ↓","Calidad de datos ↑"]
+    "id":"kbs-finance-12-automations",
+    "title":"KBS — 12 Finance Automations",
+    "when":"2021–2022",
+    "client":"KBS (Team International)",
+    "skills":["automationanywhere","visualstudio","excel","javascript","powerquery","jira","security"],
+    "stack":"AA360, VS, Excel/Power Query, JavaScript; governance + security baked in.",
+    "summary":"Automated a dozen finance processes and ERP integrations using AA360; set up governance and design reviews.",
+    "outcomes":["Cycle time ↓","SLA attainment ↑","Manual work eliminated"]
   },
   {
     "id":"zebra-uipath-testmgr",
@@ -394,5 +414,3 @@
     "notes":"Guía de usuario y flujos de transformación documentados (A1…E2, D1…D3)."
   }
 ]
-
-    
